--- a/genbyng.html
+++ b/genbyng.html
@@ -10,6 +10,7 @@
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angular.1.3.5.min.js"></script>
+    <script src="js/php.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body>
